Mutter can crash in meta_window_handle_ungrabbed_event -> meta_window_shortcuts_inhibited
Here's the trace.
#0 0x00007fd01a878bb7 in meta_window_shortcuts_inhibited (source=0x558b074d9b90, window=0x0)
at ../../mutter/src/core/window.c:8521
No locals.
#1 meta_window_handle_ungrabbed_event (window=window@entry=0x558b09ad0060, event=event@entry=0x558b0ac57820)
at ../../mutter/src/core/window.c:8346
display = 0x558b077ca030
unmodified = <optimized out>
is_window_grab = <optimized out>
is_window_button_grab_allowed = <optimized out>
grab_mods = CLUTTER_MOD1_MASK
event_mods = <optimized out>
source = 0x558b074d9b90
x = 1.73654791e-22
y = 4.58504858e-41
button = 1
#2 0x00007fd01a8576ff in meta_display_handle_event (event=0x558b0ac57820, display=0x558b077ca030)
at ../../mutter/src/core/events.c:353
window = <optimized out>
bypass_clutter = 1
backend = 0x558b07146150
bypass_wayland = 0
gesture_tracker = <optimized out>
sequence = <optimized out>
source = <optimized out>
compositor = 0x0
backend = <optimized out>
window = <optimized out>
bypass_clutter = <optimized out>
bypass_wayland = <optimized out>
gesture_tracker = <optimized out>
sequence = <optimized out>
source = <optimized out>
compositor = <optimized out>
compositor = <optimized out>
cursor_tracker = <optimized out>
xdisplay = <optimized out>
#3 event_callback (event=0x558b0ac57820, data=0x558b077ca030) at ../../mutter/src/core/events.c:423
display = 0x558b077ca030
#4 0x00007fd01aa2477e in _clutter_event_process_filters (event=event@entry=0x558b0ac57820)
at ../../mutter/clutter/clutter/clutter-event.c:1922
event_filter = <optimized out>
context = <optimized out>
l = <optimized out>
next = 0x0
#5 0x00007fd01aa3d977 in emit_pointer_event (device=0x558b074d9090, event=0x558b0ac57820)
at ../../mutter/clutter/clutter/clutter-main.c:1706
context = 0x558b071a4a00
context = <optimized out>
#6 _clutter_process_event_details (context=0x558b071a4a00, event=0x558b0ac57820, stage=<optimized out>)
at ../../mutter/clutter/clutter/clutter-main.c:2143
actor = <optimized out>
x = 1171.45435
y = 302.490204
device = 0x558b074d9090
device = <optimized out>
actor = <optimized out>
_g_boolean_var_ = <optimized out>
actor = <optimized out>
crossing = <optimized out>
crossing = <optimized out>
core_pointer = <optimized out>
x = <optimized out>
y = <optimized out>
core_pointer = <optimized out>
actor = <optimized out>
x = <optimized out>
y = <optimized out>
_g_boolean_var_ = <optimized out>
_g_boolean_var_ = <optimized out>
_g_boolean_var_ = <optimized out>
_g_boolean_var_ = <optimized out>
grab_actor = <optimized out>
actor = <optimized out>
sequence = <optimized out>
x = <optimized out>
y = <optimized out>
_g_boolean_var_ = <optimized out>
_g_boolean_var_ = <optimized out>
_g_boolean_var_ = <optimized out>
#7 _clutter_process_event (event=event@entry=0x558b0ac57820) at ../../mutter/clutter/clutter/clutter-main.c:2319
context = 0x558b071a4a00
stage = <optimized out>
#8 0x00007fd01aa56c00 in _clutter_stage_process_queued_events (stage=0x558b074e8630)
at ../../mutter/clutter/clutter/clutter-stage.c:1008
next_event = <optimized out>
device = 0x558b074d9090
device_type = <optimized out>
event = 0x558b0ac57820
next_device = <optimized out>
check_device = <optimized out>
priv = 0x558b074e8000
events = 0x558b07a8cc40 = {0x558b0ac57820}
l = 0x558b07a8cc40 = {0x558b0ac57820}
__func__ = "_clutter_stage_process_queued_events"
#9 0x00007fd01aa3eee9 in master_clock_process_events (stages=0x558b092deda0 = {...}, master_clock=0x558b07a7c400)
at ../../mutter/clutter/clutter/clutter-master-clock-default.c:288
l = 0x558b092deda0 = {0x558b074e8630}
start = 116116512885
l = <optimized out>
start = <optimized out>
__delta = <optimized out>
__budget = <optimized out>
#10 clutter_clock_dispatch (source=<optimized out>, callback=<optimized out>, user_data=<optimized out>)
at ../../mutter/clutter/clutter/clutter-master-clock-default.c:483
clock_source = <optimized out>
master_clock = 0x558b07a7c400
stages = 0x558b092deda0 = {0x558b074e8630}
#11 0x00007fd01b432abd in g_main_dispatch (context=0x558b071436f0) at ../../glib/glib/gmain.c:3173
dispatch = 0x7fd01aa3ee20 <clutter_clock_dispatch>
prev_source = 0x0
was_in_call = 0
user_data = 0x0
callback = 0x0
cb_funcs = <optimized out>
cb_data = <optimized out>
need_destroy = <optimized out>
source = 0x558b07a7bef0
current = 0x558b07123930
i = 0
current = <optimized out>
i = <optimized out>
__FUNCTION__ = "g_main_dispatch"
source = <optimized out>
_g_boolean_var_ = <optimized out>
was_in_call = <optimized out>
user_data = <optimized out>
callback = <optimized out>
cb_funcs = <optimized out>
cb_data = <optimized out>
need_destroy = <optimized out>
dispatch = <optimized out>
prev_source = <optimized out>
_g_boolean_var_ = <optimized out>
#12 g_main_context_dispatch (context=context@entry=0x558b071436f0) at ../../glib/glib/gmain.c:3838
No locals.
#13 0x00007fd01b432d58 in g_main_context_iterate (context=0x558b071436f0, block=block@entry=1,
dispatch=dispatch@entry=1, self=<optimized out>) at ../../glib/glib/gmain.c:3911
max_priority = 150
timeout = 0
some_ready = 1
nfds = <optimized out>
allocated_nfds = 19
fds = 0x558b09c42150
#14 0x00007fd01b43301a in g_main_loop_run (loop=0x558b075017c0) at ../../glib/glib/gmain.c:4105
self = <optimized out>
__FUNCTION__ = "g_main_loop_run"
#15 0x00007fd01a85e3fc in meta_run () at ../../mutter/src/core/main.c:667
No locals.
#16 0x0000558b05903365 in main (argc=<optimized out>, argv=<optimized out>) at ../../gnome-shell/src/main.c:556
ctx = <optimized out>
error = 0x0
ecode = <optimized out>